using UnityEngine;
using UnityEngine.UI;
using DG.Tweening;
using UnityEngine.EventSystems;

public class VRButton : MonoBehaviour
{
    [SerializeField] protected AudioClip clickedSE;

}